# dns

./: CMakeLists.txt  Makefile  README  msg.h  tags  version.h  version.sh  vind.c  vind.h
conf/.svn/: all-wcprops  entries
conf/.svn/text-base/: vind.cfg.svn-base
db/: redis.c  redis.h
db/.svn/: all-wcprops  entries
db/.svn/text-base/: redis.c.svn-base
engine/: access.c  core.c  msg.c  obj.h  probe.c  register.c  route.c  store.c  store.h
engine/.svn/: all-wcprops  entries
engine/.svn/text-base/: core.c.svn-base  obj.h.svn-base  probe.c.svn-base  probe.h.svn-base  register.c.svn-base  reply.c.svn-base  reply.h.svn-base  store.c.svn-base
engine/.svn/tmp/: store.c.tmp
include/: threads.h
include/.svn/: all-wcprops  entries
lib/.svn/: all-wcprops  entries
utils/: arch.c  arch.h  logo.c
utils/.svn/: all-wcprops  entries
utils/.svn/text-base/: arch.c.svn-base  arch.h.svn-base
utils/tmp/: arch.c  arch.h
